--- a/css/contact.css
+++ b/css/contact.css
@@ -1,32 +1,46 @@
 /*PAGE CONTACT*/
-
+body {
+    background-color: var(--background-color-light);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .contact-header {
     margin-top: 1.5em;
     margin-bottom: 1.5em;
     display: flex;
     justify-content: center;
-    background-color: var(--background-color-dark);
+    
 }
 .title-form {
     margin: 1em;
+    
 }
 
+.title-form h1 {
+    color:#000;
+}
+.container-connexion {
+    background-color: #dee9e8;
+    padding:1.5em;
+    height:25em;
+    border-radius:5%;
+    
+}
+
+.container-form {
+    background-color: #dee9e8;
+    padding:1.5em;
+    margin-bottom: 2.5em;
+    border-radius:5%;
+    
+}
 .form {
-    width: 100%;
-    height: 50em;
-    background: linear-gradient(180deg, rgba(38,70,83,1) 0%, rgba(42,157,143,1) 100%);
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
     align-items: center;
-    color: #fff;
 }
 
-.form div {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-}
 .form-select,
 .form-control {
     width: 30em;
@@ -39,14 +53,16 @@
 select,
 input {
     height: 2.5em;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
 }
 
+/*
 .form-select:focus-visible,
 .form-control:focus-visible
  {
     outline: 3px solid #F4A261;
 }
-
+*/
 .button {
     display: flex;
     flex-direction: column;
@@ -55,11 +71,14 @@ input {
 }
 .button-orange {
     border: none;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
 }
+
+    /*
 .button-orange:hover{
     border: 3px solid #F4A261;
 }
-
+*/
 @media screen and (max-width:450px){
     .form-select,
     .form-control {
