--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,7 @@ p {
     border-radius: 20px;
     transform: translateY(0);
     transition: all 0.3s linear;
+    border: none;
 }
 
 .button-green:hover {
@@ -116,6 +117,7 @@ p {
     border-radius: 20px;
     transform: translateY(0);
     transition: all 0.3s linear;
+    border: none;
 }
 
 .button-orange:hover {
