--- a/css/page-animaux.css
+++ b/css/page-animaux.css
@@ -1,4 +1,5 @@
 /*ZOOM ANIMAUX*/
+
 .title-habitat {
     width: 100%;
     display: flex;
@@ -8,7 +9,7 @@
     margin-top: 2.5em;
 }
 .title-habitat img {
-    width: 100%;
+    width: 85%;
     margin-bottom: 1.5em;
 }
 .title-habitat p {
@@ -17,7 +18,8 @@
 }
 .container-animal {
     display: flex;
-    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 .animal img{
     width: 30em;
@@ -28,7 +30,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 5em;
+   
 }
 ul {
     margin: 1.5em;
