--- a/css/page-map.css
+++ b/css/page-map.css
@@ -9,6 +9,7 @@
     margin-bottom: 5.5em;
     flex-direction: column;
     align-items: center;
+    text-align: center;
 }
 .container-map2 p {
     width: 80%;
